Fix Solar issues